--- a/produtos/edu.html
+++ b/produtos/edu.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="../assets/css/styleTelaQuadrada.css">
     <link rel="stylesheet" href="../assets/css/styleTv.css">
     <link rel="stylesheet" href="../assets/css/styleProdutos.css">
-    <link rel="icon" href="assets/images/logo-bistec-favicon.png">
+    <link rel="stylesheet" href="../assets/css/styleDark.css">
+    <link rel="icon" href="../assets/images/logo-bistec-favicon.png">
 </head>
 <body>
     <!-- cabeçalho -->
@@ -40,27 +41,27 @@
         <div class="produto-texto">
             <h1>Bistec Edu</h1>
             <p>
-                Constantemente, a implementação de um software de gestão acaba por falhar, porque não é dada a atenção necessária a esse profissional que utilizará a ferramenta no dia-a-dia. Para evitar este tipo de situação, <strong>o Bistec Edu fornece formação para toda a sua equipa explorar 100% da capacidade das soluções adquiridas.</strong>
+                Constantemente, a implementação de um software de gestão acaba por falhar, porque não é dada a atenção necessária ao profissional que utilizará a ferramenta no dia-a-dia. Para evitar este tipo de situação, o Bistec Edu fornece formação para toda a sua equipa explorar 100% da capacidade das soluções adquiridas.
             </p>
 
             <p>
-                Muitas vezes a implantação de um software de gestão fracassa porque não é dada a atenção necessária àquele profissional que irá, de fato, fazer uso da ferramenta no dia a dia: o usuário.
+                Muitas vezes a implantação de um software de gestão fracassa porque não é dada a atenção necessária ao profissional que irá, de facto, fazer uso da ferramenta no dia a dia: o utilizador.
             </p>
 
             <p>
-                Por isso, um dos aspectos mais importantes é a questão do treinamento. Quando o usuário não recebe um treinamento adequado, ele não faz um bom uso da ferramenta e sente-se frustrado. Como resultado, ele pode passar a evitar o uso do software, voltando a executar tarefas da maneira como fazia antes da implantação.
+                Por isso, um dos aspetos mais importantes é a questão  da formação. Quando o utilizador não recebe formação adequada não faz um bom uso da ferramenta e sente-se frustrado. Como resultado, ele pode passar a evitar o uso do software, voltando a executar tarefas da maneira como fazia antes da implementação.
             </p>
 
             <p>
-                O ideal é que o usuário receba um treinamento constante (ou por um período maior), de forma personalizada, que permita que ele aprenda a utilizar todos os recursos do software de gestão da melhor maneira possível. Este comprometimento com o usuário gera resultados extremamente benéficos para a empresa, principalmente ao relacionado à valorização do investimento realizado.
+                O ideal é que o utilizador receba formação constante (ou por um período maior), de forma personalizada, que lhe permita aprender a utilizar todos os recursos do software de gestão da melhor maneira possível. Este comprometimento com o utilizador gera resultados extremamente benéficos para a empresa, principalmente quanto à valorização do investimento realizado.
             </p>
 
             <p>
-                Temos profissionais com mais de 25 anos de experiência académica e educadores certificados do Google nível 1.
+                Temos profissionais com mais de 25 anos de experiência académica. Formadores com CCP (Certificado de Competências Pedagógicas), e-Formadores e educadores certificados Google nível 1.
             </p>
 
             <h2>
-                Acesso aos nossos recursos de aprendizado:
+                Acesso aos nossos recursos de formação:
             </h2>
 
             <div class="bistec-edu-plataformas">
@@ -70,63 +71,10 @@
         </div>
     </article>
 
-    <!-- rodapé -->
-
-    <footer>
-        <div class="redes-sociais">
-            <a href="mailto:bistec@bistec.com.br" target="_blank"><ion-icon name="mail" class="ionspecial"></ion-icon></a>
-            <a href="https://facebook.com/bistecweb" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a>
-            <a href="https://instagram.com/bistecweb" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
-            <a href="https://youtube.com/bistecweb" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a>
-            <a href="https://www.twitter.com/bistecweb" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a>
-            <a href="https://www.flickr.com/bistec" target="_blank"><ion-icon name="logo-flickr"></ion-icon></a>
-            <a href="https://soundcloud.com/bistecweb" target="_blank"><ion-icon name="logo-soundcloud"></ion-icon></a>
-            <a href="https://linkedin.com/company/bistec" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
-            <a href="#" class="IconLocation"><ion-icon name="location" class="ionspecial"></ion-icon></a>
-        </div>
-
-        <div class="contacts">
-            <div class="contact item1">
-                <a href="#contacts_section" id="contacts_section">
-                    <img src="../assets/images/portugal.png" alt="Portugal País"> Bistec Portugal
-                </a>
-                <p><a href="tel:+351308807114">+351 308 807 114</a></p>
-            </div>
-
-            <div class="contact item2">
-                <a href="https://bistec.com.br">
-                    <img src="../assets/images/brazil.png" alt="Brasil País"> Bistec Brasil 
-                </a>  
-                <p>
-                    <a href="tel:+55(13)3235-7735">+55 (13) 3235-7735</a>  
-                </p>
-                <p>
-                    <a href="tel:+55(13)3522-8184">+55 (13) 3522-8184</a>
-                </p>
-            </div>
-
-            <div class="contact item3">
-                    <a href="https://api.whatsapp.com/send?phone=5513992101945" target="_blank"><img src="../assets/images/whatsapp.png" alt="Logo Whatsapp Business"> Whatsapp Business </a>
-                <p>
-                    <a href="https://api.whatsapp.com/send?phone=5513992101945" target="_blank">+55 (13) 99210-1945</a>
-                </p>
-            </div>
-            <!--
-            <div class="contact item4">
-                <p>
-                    <img src="assets/images/clock.png" alt="Logo Horário"> Funcionamento 
-                </p> 
-                <p>Segunda à Sexta:</p> 
-                <p>Horário a ser definido</p>
-            </div> 
-            -->
-        </div>
-    </footer>
-    <div class="footer-copyright">
-        <p>©2022 Bistec · Consultoria de T I · Todos os direitos reservados.</p>
-    </div>
-
+    <span class="rodape"></span>
+    
     <script src="../assets/js/componente_menu.js"></script>
+    <script src="../assets/js/componente_rodape.js"></script>
     <script src="../assets/js/main.js" defer></script>
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
     <script src="//code.jivosite.com/widget/3bZuUHkWaM" async></script>
