--- a/produtos/outsourcing.html
+++ b/produtos/outsourcing.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="../assets/css/styleTelaQuadrada.css">
     <link rel="stylesheet" href="../assets/css/styleTv.css">
     <link rel="stylesheet" href="../assets/css/styleProdutos.css">
-    <link rel="icon" href="assets/images/logo-bistec-favicon.png">
+    <link rel="stylesheet" href="../assets/css/styleDark.css">
+    <link rel="icon" href="../assets/images/logo-bistec-favicon.png">
 </head>
 <body>
     <!-- cabeçalho -->
@@ -40,79 +41,22 @@
     <div class="produto-texto">
         <h1>Bistec Outsourcing</h1>
         <p>
-            A Bistec, consolidada no mercado de <strong>tecnologia para o comércio e serviços</strong>, oferece o kit completo para montar seu PDV e automatizar suas vendas.
+            A Bistec, consolidada no mercado de tecnologia para o comércio e serviços, oferece o kit completo para montar o seu PDV e automatizar suas vendas.
         </p>
         <p>
-            Adquira conosco a Solução SAT Fiscal, facilite sua gestão e as transações com seus clientes e esteja em dia com a legislação fiscal. Os kits podem conter terminais de venda (teclados inteligentes), leitores de código de barras, relógios de pontos digitais, computadores, etc. Temos também softwares para a automação comercial da sua empresa.
+            Facilite a sua gestão e as transações com os seus clientes e esteja em dia com a legislação fiscal. Os kits podem conter terminais de venda (teclados inteligentes), leitores de código de barras, relógios de pontos digitais, computadores, etc. Temos também softwares para a automação comercial da sua empresa.
         </p>
 
         <p>
             Elimine falhas de controle operacional com os relógios de pontos digitais. Com o modelo móvel o controle de ponto dos funcionários pode ser realizado onde eles estiverem.
         </p>
-
-        <p>
-            Agora, se você esta procurando a melhor solução para gestão da sua empresa, <a target="_blank" href="https://hiper.com.br/experimente-gratis/?HCode=BIS01625">clique aqui e Experimente grátis por 7 dias!</a>
-        </p>
     </div>
     </article>
 
-    <!-- rodapé -->
-
-    <footer>
-        <div class="redes-sociais">
-            <a href="mailto:bistec@bistec.com.br" target="_blank"><ion-icon name="mail" class="ionspecial"></ion-icon></a>
-            <a href="https://facebook.com/bistecweb" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a>
-            <a href="https://instagram.com/bistecweb" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
-            <a href="https://youtube.com/bistecweb" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a>
-            <a href="https://www.twitter.com/bistecweb" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a>
-            <a href="https://www.flickr.com/bistec" target="_blank"><ion-icon name="logo-flickr"></ion-icon></a>
-            <a href="https://soundcloud.com/bistecweb" target="_blank"><ion-icon name="logo-soundcloud"></ion-icon></a>
-            <a href="https://linkedin.com/company/bistec" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
-            <a href="#" class="IconLocation"><ion-icon name="location" class="ionspecial"></ion-icon></a>
-        </div>
-
-        <div class="contacts">
-            <div class="contact item1">
-                <a href="#contacts_section" id="contacts_section">
-                    <img src="../assets/images/portugal.png" alt="Portugal País"> Bistec Portugal
-                </a>
-                <p><a href="tel:+351308807114">+351 308 807 114</a></p>
-            </div>
-
-            <div class="contact item2">
-                <a href="https://bistec.com.br">
-                    <img src="../assets/images/brazil.png" alt="Brasil País"> Bistec Brasil 
-                </a>  
-                <p>
-                    <a href="tel:+55(13)3235-7735">+55 (13) 3235-7735</a>  
-                </p>
-                <p>
-                    <a href="tel:+55(13)3522-8184">+55 (13) 3522-8184</a>
-                </p>
-            </div>
-
-            <div class="contact item3">
-                    <a href="https://api.whatsapp.com/send?phone=5513992101945" target="_blank"><img src="../assets/images/whatsapp.png" alt="Logo Whatsapp Business"> Whatsapp Business </a>
-                <p>
-                    <a href="https://api.whatsapp.com/send?phone=5513992101945" target="_blank">+55 (13) 99210-1945</a>
-                </p>
-            </div>
-            <!--
-            <div class="contact item4">
-                <p>
-                    <img src="assets/images/clock.png" alt="Logo Horário"> Funcionamento 
-                </p> 
-                <p>Segunda à Sexta:</p> 
-                <p>Horário a ser definido</p>
-            </div> 
-            -->
-        </div>
-    </footer>
-    <div class="footer-copyright">
-        <p>©2022 Bistec · Consultoria de T I · Todos os direitos reservados.</p>
-    </div>
-
+    <span class="rodape"></span>
+    
     <script src="../assets/js/componente_menu.js"></script>
+    <script src="../assets/js/componente_rodape.js"></script>
     <script src="../assets/js/main.js" defer></script>
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
     <script src="//code.jivosite.com/widget/3bZuUHkWaM" async></script>
