--- a/produtos/rgpd.html
+++ b/produtos/rgpd.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bistec MSP - Bistec Portugal</title>
+    <title>Bistec RGPD - Bistec Portugal</title>
     <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="../assets/css/styleMobile.css">
     <link rel="stylesheet" href="../assets/css/styleTablet.css">
@@ -22,7 +22,7 @@
     <article id="first_section">
         <!-- banner -->
         <section class="banner-bistec">
-            <img src="../assets/images/produtos/bistec-msp-intro.jpg" alt="Imagem de fundo do produto Bistec Edu">
+            <img src="../assets/images/produtos/banner-bistec-gdpr.png" alt="Imagem de fundo do produto Bistec RGPD">
             <!--<div class="banner-bistec-texto">
                 <h1>Bistec Portugal</h1>
                 <h2>Serviços em tecnologia para todas as empresas</h2>
@@ -30,7 +30,7 @@
         </section>
 
         <section class="banner-bistec-mobile">
-            <img src="../assets/images/produtos/banner-msp-mobile.png" alt="Imagem de fundo do produto Bistec Edu">
+            <img src="../assets/images/produtos/banner-gdpr-mobile.png" alt="Imagem de fundo do produto Bistec RGPD">
             <!-- <div class="banner-bistec-texto">
                 <h1>Bistec Portugal</h1>
                 <h2>Serviços em tecnologia para todas as empresas</h2>
@@ -38,23 +38,15 @@
         </section>
 
     <!-- texto produto -->
-    <div class="produto-texto">
-        <h1>Bistec MSP</h1>
-        <p>
-            Quando se trata de atendimento técnico para a sua empresa atualmente existem dois modelos, o break-fix (quebrou-consertou) e o MSP (Provedores de Serviços Gerenciados).
-        </p>
-        <p>
-            No modelo break-fix o suporte técnico é acionado após o problema acontecer e até que ele seja resolvido você fica com seu equipamento/sistema inoperante.
-        </p>
-
-        <p>
-            Já no modelo MSP, a Bistec atua ativamente, utilizando ferramentas gerenciais, para analisar em tempo real o que está a acontecer com o seu computador e sistemas. Dessa forma é possível resolver os seus problemas antes mesmo de eles acontecerem.
-        </p>
-
-        <p>
-            Ainda restam dúvidas sobre qual solução adquirir? <a class="link_msp" target="_blank" href="https://api.whatsapp.com/send?phone=5513992101945&text=Ol%C3%A1,%20estou%20com%20uma%20d%C3%BAvida%20sobre%20a%20solu%C3%A7%C3%A3o%20Bistec%20MSP">Converse com um de nossos atendentes sobre a solução BISTEC MSP</a>
-        </p>
-    </div>
+        <div class="produto-texto">
+            <h1>Bistec RGPD</h1>
+            <p>
+                O Regulamento Geral de Proteção de Dados (RGPD) é um regulamento da legislação europeia sobre privacidade e proteção de dados pessoais, aplicável a todos os indivíduos da União Europeia e do Espaço Económico Europeu que foi implementado em 2018.
+            </p>
+            <p>
+                A RGPD define multas, sanções e processos cível aos controladores e operadores que não cumpram com as suas bases legais, de acordo com o tipo de evento e gravidade.
+            </p>
+        </div>
     </article>
 
     <span class="rodape"></span>
