--- a/suporte.html
+++ b/suporte.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./assets/css/styleTablet.css">
     <link rel="stylesheet" href="./assets/css/styleTelaQuadrada.css">
     <link rel="stylesheet" href="./assets/css/styleTv.css">
+    <link rel="stylesheet" href="./assets/css/styleDark.css">
     <link rel="icon" href="assets/images/logo-bistec-favicon.png">
 </head>
 <body>
@@ -24,7 +25,8 @@
             <h1>Suporte Técnico</h1>
             <p>Este canal é exclusivo para clientes de contrato.</p>
             <!--<p>Helpdesk on-line aberto de <strong>segunda à sexta</strong>, das <strong>8:15h às 18:00h.</strong></p>-->
-            <p>Caso sua empresa não seja parceira ainda, fale conosco!</p>
+            <p>Caso a sua empresa ainda não seja parceira, fale connosco!
+            </p>
             <p>Faça Download do Anydesk!</p>
             <div class="bt-dialog-anydesk">
                 <a href="https://download.anydesk.com/AnyDesk.exe" class="button_text">DOWNLOAD ANYDESK</a>                   
@@ -39,62 +41,10 @@
         </section>
     </article>
 
-    <!-- rodapé -->
-
-    <footer>
-        <div class="redes-sociais">
-            <a href="mailto:bistec@bistec.com.br" target="_blank"><ion-icon name="mail" class="ionspecial"></ion-icon></a>
-            <a href="https://facebook.com/bistecweb" target="_blank"><ion-icon name="logo-facebook"></ion-icon></a>
-            <a href="https://instagram.com/bistecweb" target="_blank"><ion-icon name="logo-instagram"></ion-icon></a>
-            <a href="https://youtube.com/bistecweb" target="_blank"><ion-icon name="logo-youtube"></ion-icon></a>
-            <a href="https://www.twitter.com/bistecweb" target="_blank"><ion-icon name="logo-twitter"></ion-icon></a>
-            <a href="https://www.flickr.com/bistec" target="_blank"><ion-icon name="logo-flickr"></ion-icon></a>
-            <a href="https://soundcloud.com/bistecweb" target="_blank"><ion-icon name="logo-soundcloud"></ion-icon></a>
-            <a href="https://linkedin.com/company/bistec" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
-            <a href="#" class="IconLocation"><ion-icon name="location" class="ionspecial"></ion-icon></a>
-        </div>
-
-        <div class="contacts">
-            <div class="contact item1">
-                <a href="#contacts_section" id="contacts_section">
-                    <img src="assets/images/portugal.png" alt="Portugal País"> Bistec Portugal
-                </a>
-                <p><a href="tel:+351308807114">+351 308 807 114</a></p>
-            </div>
+    <span class="rodape"></span>
     
-            <div class="contact item2">
-                <a href="https://bistec.com.br">
-                    <img src="assets/images/brazil.png" alt="Brasil País"> Bistec Brasil 
-                </a>  
-                <p>
-                    <a href="tel:+55(13)3235-7735">+55 (13) 3235-7735</a>  
-                </p>
-                <p>
-                    <a href="tel:+55(13)3522-8184">+55 (13) 3522-8184</a>
-                </p>                    
-            </div>
-    
-            <div class="contact item3">
-                <a href="https://api.whatsapp.com/send?phone=5513992101945" target="_blank"><img src="assets/images/whatsapp.png" alt="Logo Whatsapp Business"> Whatsapp Business </a>
-                <p>
-                    <a href="https://api.whatsapp.com/send?phone=5513992101945" target="_blank">+55 (13) 99210-1945</a>
-                </p>
-            </div> 
-             <!--
-            <div class="contact item4">
-                <p>
-                    <img src="assets/images/clock.png" alt="Logo Horário"> Funcionamento 
-                </p> 
-                <p>Segunda à Sexta:</p> 
-                <p>08:15h - 18:00h</p>
-            </div> -->
-        </div>
-    </footer>
-    <div class="footer-copyright">
-        <p>©2022 Bistec · Consultoria de T I · Todos os direitos reservados.</p>
-    </div>
-
     <script src="./assets/js/componente_menu.js"></script>
+    <script src="./assets/js/componente_rodape.js"></script>
     <script src="./assets/js/main.js" defer></script>
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
     <script src="//code.jivosite.com/widget/3bZuUHkWaM" async></script>
