colocando icone do youtube de forma local

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <article id="first_section">
         <!-- banner -->
         <section class="banner-bistec" id="imagemUnica">
-            <img id="img-banner" src="https://ik.imagekit.io/bistecpt/imagens/banner-moliceiro.png" alt="Imagem de fundo com o moliceiro da cidade de Aveiro" width="1000" height="1000">
+            <img id="img-banner" src="assets/images/moliceiro-banner-bistecportugal2.png" alt="Imagem de fundo com o moliceiro da cidade de Aveiro" width="1000" height="1000">
             <div class="banner-bistec-texto">
                 <h1>Bistec Portugal</h1>
                 <h2>Tecnologia para empresas de todos os tamanhos</h2>
