--- a/produtos/edu.html
+++ b/produtos/edu.html
@@ -67,8 +67,8 @@
             <div class="bistec-edu-plataformas">
                 <a href="https://edu.bistec.com.br/ead/login/index.php" target="_blank"><img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-edu.png" alt="Bistec Edu"></a>
                 <a href="https://edu.bistec.com.br/ead/login/index.php" target="_blank"><img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-edu-branco.png" alt="Bistec Edu"></a>
-                <a href="https://www.youtube.com/c/BISTECEDU" target="_blank"><img src="https://ik.imagekit.io/bistecpt/imagens/produtos/youtube.png" alt="Canal do YouTube da Bistec Edu"></a>
-                <a href="https://www.youtube.com/c/BISTECEDU" target="_blank"><img src="https://ik.imagekit.io/bistecpt/imagens/produtos/youtube_white.png" alt="Canal do YouTube da Bistec Edu"></a>
+                <a href="https://www.youtube.com/c/BISTECEDU" target="_blank"><img src="../assets/images/youtube.png" alt="Canal do YouTube da Bistec Edu"></a>
+                <a href="https://www.youtube.com/c/BISTECEDU" target="_blank"><img src="../assets/images/youtube.png" alt="Canal do YouTube da Bistec Edu"></a>
             </div>
         </div>
     </article>
