--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
         <!-- PRODUTOS -->
         <section class="bistec-produtos" id="bistec-automacao">
-                <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-automacao.png" alt="Bistec Automação" width="610" height="210"> 
-                <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-automacao-branco.png" alt="Bistec Automação" width="610" height="210">
+                <img src="https://ik.imagekit.io/bistecbr/img-lg-bistec-automacao.png" alt="Bistec Automação" width="610" height="210"> 
+                <img src="https://ik.imagekit.io/bistecbr/img-lg-bistec-automacao-branco.png" alt="Bistec Automação" width="610" height="210">
                 <div class="texto-produtos">
                     <h2>Troque a anotação pela automação</h2>
                     <h3>Facilite a sua gestão e o consumo dos seus clientes. Automatize!</h3>
@@ -57,8 +57,8 @@
         </section>
 
         <section class="bistec-produtos" id="bistec-cloud">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-cloud.png" alt="Bistec Cloud" width="610" height="210">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-cloud-branco.png" alt="Bistec Cloud" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecbr/img-lg-bistec-cloud.png" alt="Bistec Cloud" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecbr/img-lg-bistec-cloud-branco.png" alt="Bistec Cloud" width="610" height="210">
                 <div class="texto-produtos">
                     <h2>Backup corporativo na nuvem</h2>
                     <h3>Guarde o que é importante com segurança, sem ocupar espaço algum!</h3>
@@ -68,8 +68,8 @@
         </section>
 
         <section class="bistec-produtos" id="bistec-edu">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-edu.png" alt="Bistec Edu" width="610" height="210">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-edu-branco.png" alt="Bistec Edu" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecbr/img-lg-bistec-edu.png" alt="Bistec Edu" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecbr/img-lg-bistec-edu-branco.png" alt="Bistec Edu" width="610" height="210">
                 <div class="texto-produtos">
                     <h2>Treinamentos: use a tecnologia com capacidade máxima.</h2>
                     <h3>Faça o treinamento com toda a sua equipe e explore 100% da capacidade das soluções adquiridas.</h3>
@@ -78,8 +78,8 @@
         </section>
 
         <section class="bistec-produtos" id="bistec-msp">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-msp.png" alt="Bistec MSP" width="610" height="210">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-msp-branco.png" alt="Bistec MSP" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecbr/img-lg-bistec-msp.png" alt="Bistec MSP" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecbr/img-lg-bistec-msp-branco.png" alt="Bistec MSP" width="610" height="210">
                 <div class="texto-produtos">
                     <h2>Você sabe o que é um MSP?</h2>
                     <h3>
@@ -92,8 +92,8 @@
         </section>
 
         <section class="bistec-produtos" id="bistec-outsourcing" >
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-outsourcing.png" alt="Bistec OutSourcing" width="610" height="210">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-outsourcing-branco.png" alt="Bistec OutSourcing" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecbr/img-lg-bistec-outsourcing.png" alt="Bistec OutSourcing" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecbr/img-lg-bistec-outsourcing-branco.png" alt="Bistec OutSourcing" width="610" height="210">
                 <div class="texto-produtos">
                     <h2>Contrate outsourcing de TI</h2><p>
                     <h3>Contrate técnicos preparados para cuidar de sua empresa.</h3>
@@ -103,8 +103,8 @@
         </section>
 
         <section class="bistec-produtos" id="bistec-renting" >
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-renting.png" alt="Bistec Renting" width="610" height="210">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-renting-branco.png" alt="Bistec Renting" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecbr/img-lg-bistec-renting.png" alt="Bistec Renting" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecbr/img-lg-bistec-renting-branco.png" alt="Bistec Renting" width="610" height="210">
                 <div class="texto-produtos">
                     <h2>Renting de TI</h2>
                     <h3>Faça a locação de equipamentos, e mantenha a liquidez de sua empresa</h3>
@@ -114,8 +114,8 @@
         </section>
 
         <section class="bistec-produtos" id="bistec-gpdr" >
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-rgpd.png" alt="Bistec RGPD" width="610" height="210">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-rgpd-branco.png" alt="Bistec RGPD" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecbr/img-lg-bistec-rgpd.png" alt="Bistec RGPD" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecbr/img-lg-bistec-rgpd-branco.png" alt="Bistec RGPD" width="610" height="210">
             <div class="texto-produtos">
                 <h2>Adeque sua empresa ao RGPD</h2>
                 <h3>
@@ -127,8 +127,8 @@
         </section>
 
         <section class="bistec-produtos" id="bistec-soft" >
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-soft.png" alt="Bistec Soft" width="610" height="210">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-soft-branco.png" alt="Bistec Soft" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecbr/img-lg-bistec-soft.png" alt="Bistec Soft" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecbr/img-lg-bistec-soft-branco.png" alt="Bistec Soft" width="610" height="210">
                 <div class="texto-produtos">
                     <h2>Todo tipo de software</h2><p>
                     <h3>O Bistec soft agora cuida do seu site e contas de e-mail!</h3>
@@ -138,12 +138,12 @@
         </section>
 
         <section class="bistec-produtos" id="bistec-wifi" >
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-wifi.png" alt="Bistec wifi" width="610" height="210">
-            <img src="https://ik.imagekit.io/bistecpt/imagens/img-lg-bistec-wifi-branco.png" alt="Bistec wifi" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecbr/img-lg-bistec-wifi.png" alt="Bistec wifi" width="610" height="210">
+            <img src="https://ik.imagekit.io/bistecbr/img-lg-bistec-wifi-branco.png" alt="Bistec wifi" width="610" height="210">
             <div class="texto-produtos">
-                <h2>Conheça a nossa solução WAAS: Wi-Fi as a service.</h2>
+                <h2>Rede wifi com alto desempenho</h2>
                 <h3>
-                    Tudo que a sua empresa precisa para ter uma rede wi-Fi com alto desempenho e de qualidade.
+                    Transforme seu Wifi em uma ferramenta completa de marketing de relacionamento.
                 </h3>
                 
                 <a href="produtos/wifi.html" class="button_text bt-dialog">Saiba Mais · Bistec Wifi</a>
