--- a/produtos/automacao.html
+++ b/produtos/automacao.html
@@ -42,14 +42,15 @@
         <div class="produto-texto">
             <h1>Bistec Automação</h1>
             <p>
-                A Bistec, consolidada no mercado de tecnologia para o comércio e serviços, oferece o kit completo para montar o seu PDV e automatizar as suas vendas.
+                Softwares (sistemas para todos os segmentos, como restaurantes, materiais de construção, vestuário, calçados, dentre outros). 
+
             </p>
             <p>
-                Facilite a sua gestão e as transações com os seus clientes e esteja em dia com a legislação fiscal. Os kits podem conter terminais de venda (teclados inteligentes), leitores de código de barras, relógios de pontos digitais, computadores, etc. Temos também softwares para a automação comercial da sua empresa.
+                hardwares (Equipamentos como computadores, impressoras térmicas, balanças, leitores de código de barras, etiquetas eletrônicas, relógio de ponto, terminais de auto-atendimento e muito mais)
             </p>
 
             <p>
-                Elimine falhas de controle operacional com os relógios de pontos digitais. Com o modelo móvel o controle de ponto dos funcionários pode ser realizado onde eles estiverem.
+                Serviços – (Suporte realizado por consultores técnicos capacitados 
             </p>
         </div>
     </article>
