--- a/produtos/msp.html
+++ b/produtos/msp.html
@@ -41,14 +41,14 @@
     <div class="produto-texto">
         <h1>Bistec MSP</h1>
         <p>
-            Quando se trata de atendimento técnico para a sua empresa atualmente existem dois modelos, o break-fix (quebrou-consertou) e o MSP (Provedores de Serviços Gerenciados).
+            Como provedor de serviços gerenciados, a Bistec analisa em tempo real o que está acontecendo com seu computador e sistemas, atuando antes mesmo que as falhas aconteçam.
         </p>
         <p>
-            No modelo break-fix o suporte técnico é acionado após o problema acontecer e até que ele seja resolvido você fica com seu equipamento/sistema inoperante.
+            Controle (Bloqueio de sites, redes sociais, pendrives e outros dispositivos de armazenamento externo)
         </p>
 
         <p>
-            Já no modelo MSP, a Bistec atua ativamente, utilizando ferramentas gerenciais, para analisar em tempo real o que está a acontecer com o seu computador e sistemas. Dessa forma é possível resolver os seus problemas antes mesmo de eles acontecerem.
+            Proteção (Monitoramos os principais componentes dos seus computadores, além de prever possíveis ameaças, como roubo de dados ou infecção)
         </p>
 
         <p>
