correções site .pt

--- a/produtos/edu.html
+++ b/produtos/edu.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../assets/css/styleTelaQuadrada.css">
     <link rel="stylesheet" href="../assets/css/styleTv.css">
     <link rel="stylesheet" href="../assets/css/styleProdutos.css">
+    <link rel="stylesheet" href="../assets/css/styleDark.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="https://ik.imagekit.io/bistecbr/simbolo.png">
 </head>
