--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Bistec Consultoria de TI. Desde 1999 fornecendo produtos e serviços de Automação Comercial e Informática. Aproveite o melhor da tecnologia para seu negócio.">
     <title>Início - Bistec Portugal</title>
+    <link rel="stylesheet" href="./assets/css/sticky.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/styleMobile.css">
     <link rel="stylesheet" href="./assets/css/styleTablet.css">
@@ -158,7 +159,7 @@
     <script src="./assets/js/main.js" defer async></script>
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
     <script src="//code.jivosite.com/widget/3bZuUHkWaM" async></script>
-    <script>
+    <!-- <script>
         window.addEventListener("scroll", function(){
             var header = document.querySelector("header");
             if(window.matchMedia("(min-width: 621px").matches){
@@ -170,6 +171,6 @@
                 }
             }            
         })
-    </script>
+    </script> -->
 </body>
 </html>
