--- a/contato.html
+++ b/contato.html
@@ -19,6 +19,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entre em Contacto Connosco - Bistec Portugal</title>
+    <link rel="stylesheet" href="./assets/css/sticky.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/styleMobile.css">
     <link rel="stylesheet" href="./assets/css/styleTablet.css">
