--- a/produtos/cloud.html
+++ b/produtos/cloud.html
@@ -20,6 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bistec Cloud - Bistec Portugal</title>
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/sticky.css">
     <link rel="stylesheet" href="../assets/css/styleMobile.css">
     <link rel="stylesheet" href="../assets/css/styleTablet.css">
     <link rel="stylesheet" href="../assets/css/styleTelaQuadrada.css">
