--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <h2>Troque a anotação pela automação</h2>
                 <h3>Facilite a sua gestão e o consumo dos seus clientes. Automatize!</h3>
 
-                <a href="produtos/automacao.html" class="button_text bt-dialog">Saiba Mais · Bistec Automação</a>
+                <a href="produtos/automacao.html" class="button_text bt-dialog" title="Bistec Automação">Saiba Mais · Bistec Automação</a>
             </div>
         </section>
 
@@ -73,7 +73,7 @@
                 <h2>Backup corporativo na nuvem</h2>
                 <h3>Guarde o que é importante com segurança, sem ocupar espaço algum!</h3>
 
-                <a href="produtos/cloud.html" class="button_text bt-dialog">Saiba Mais · Bistec Cloud</a>
+                <a href="produtos/cloud.html" class="button_text bt-dialog" title="Bistec Cloud">Saiba Mais · Bistec Cloud</a>
             </div>
         </section>
 
@@ -84,7 +84,7 @@
             <div class="texto-produtos">
                 <h2>Treinamentos: use a tecnologia com capacidade máxima.</h2>
                 <h3>Faça o treinamento com toda a sua equipe e explore 100% da capacidade das soluções adquiridas.</h3>
-                <a href="produtos/edu.html" class="button_text bt-dialog">Saiba Mais · Bistec Edu</a>
+                <a href="produtos/edu.html" class="button_text bt-dialog" title="Bistec Edu">Saiba Mais · Bistec Edu</a>
             </div>
         </section>
 
@@ -99,7 +99,7 @@
                     com seu sistemas.
                 </h3>
 
-                <a href="produtos/msp.html" class="button_text bt-dialog">Saiba Mais · Bistec MSP</a>
+                <a href="produtos/msp.html" class="button_text bt-dialog" title="Bistec MSP">Saiba Mais · Bistec MSP</a>
 
             </div>
         </section>
@@ -114,7 +114,7 @@
                 <p>
                 <h3>Contrate técnicos preparados para cuidar de sua empresa.</h3>
 
-                <a href="produtos/outsourcing.html" class="button_text bt-dialog">Saiba Mais · Bistec Outsourcing</a>
+                <a href="produtos/outsourcing.html" class="button_text bt-dialog" title="Bistec Outsourcing">Saiba Mais · Bistec Outsourcing</a>
             </div>
         </section>
 
@@ -127,7 +127,7 @@
                 <h2>Renting de TI</h2>
                 <h3>Faça a locação de equipamentos, e mantenha a liquidez de sua empresa</h3>
 
-                <a href="produtos/renting.html" class="button_text bt-dialog">Saiba Mais · Bistec Renting</a>
+                <a href="produtos/renting.html" class="button_text bt-dialog" title="Bistec Renting">Saiba Mais · Bistec Renting</a>
             </div>
         </section>
 
@@ -143,7 +143,7 @@
                     fugas de informações de terceiros
                 </h3>
 
-                <a href="produtos/rgpd.html" class="button_text bt-dialog">Saiba Mais · Bistec RGPD</a>
+                <a href="produtos/rgpd.html" class="button_text bt-dialog" title="Bistec RGPD">Saiba Mais · Bistec RGPD</a>
             </div>
         </section>
 
@@ -157,7 +157,7 @@
                 <p>
                 <h3>O Bistec soft agora cuida do seu site e contas de e-mail!</h3>
 
-                <a href="produtos/soft.html" class="button_text bt-dialog">Saiba Mais · Bistec Soft</a>
+                <a href="produtos/soft.html" class="button_text bt-dialog" title="Bistec Soft">Saiba Mais · Bistec Soft</a>
             </div>
         </section>
 
@@ -172,7 +172,7 @@
                     Transforme seu Wifi em uma ferramenta completa de marketing de relacionamento.
                 </h3>
 
-                <a href="produtos/wifi.html" class="button_text bt-dialog">Saiba Mais · Bistec Wifi</a>
+                <a href="produtos/wifi.html" class="button_text bt-dialog" title="Bistec Wifi">Saiba Mais · Bistec Wifi</a>
             </div>
         </section>
     </article>
