página de suporte

--- a/suporte.html
+++ b/suporte.html
@@ -20,7 +20,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suporte Técnico - Bistec Portugal</title>
     <link rel="stylesheet" href="./assets/css/sticky.css">
-    <link rel="stylesheet" href="./assets/css/styleSuporte.css">
+    <link rel="stylesheet" href="https://bistec.com.pt/assets/css/styleSuporte.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/styleMobile.css">
     <link rel="stylesheet" href="./assets/css/styleTablet.css">
@@ -50,6 +50,9 @@
             <a class="bt-dialog-teamviewer" href="http://download.teamviewer.com/download/TeamViewerQS_pt.exe">DOWNLOAD TEAMVIEWER</a>
 
             <p>Fale conosco também pelo <strong><a class="suporte-wpp" href="https://api.whatsapp.com/send?phone=551340420777" target="_blank">WhatsApp Business no +55 13 4042-0777</a></strong> ou pelo <strong><a href="https://t.me/BISTEC_BOT" target="_blank" class="suporte-telegram">Telegram – Procure por Atendimento BISTEC.</a></strong> </p>
+        
+            <p>Realize uma análise completa da qualidade da sua conexão com a Internet utilizando o medidor SIMET. Clique no botão medir</p>
+            <p style="text-align: center"><iframe src="https://beta.simet.nic.br/widget.html" height="780" width="430" style="border:none"></iframe></p>
         </section>
     </article>
 
