--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
     <meta name="description"
         content="Bistec Consultoria de TI. Desde 1999 fornecendo produtos e serviços de Automação Comercial e Informática. Aproveite o melhor da tecnologia para seu negócio.">
     <title>Início - Bistec Portugal</title>
-    <link rel="stylesheet" href="./assets/css/sticky.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/styleMobile.css">
-    <link rel="stylesheet" href="./assets/css/styleTablet.css">
-    <link rel="stylesheet" href="./assets/css/styleTelaQuadrada.css">
-    <link rel="stylesheet" href="./assets/css/styleTv.css">
-    <link rel="stylesheet" href="./assets/css/styleDark.css">
+    <link rel="stylesheet" href="https://bistec.com.pt/assets/css/sticky.css">
+    <link rel="stylesheet" href="https://bistec.com.pt/assets/css/style.css">
+    <link rel="stylesheet" href="https://bistec.com.pt/assets/css/styleMobile.css">
+    <link rel="stylesheet" href="https://bistec.com.pt/assets/css/styleTablet.css">
+    <link rel="stylesheet" href="https://bistec.com.pt/assets/css/styleTelaQuadrada.css">
+    <link rel="stylesheet" href="https://bistec.com.pt/assets/css/styleTv.css">
+    <link rel="stylesheet" href="https://bistec.com.pt/assets/css/styleDark.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="https://ik.imagekit.io/bistecbr/simbolo.png">
 </head>
