--- a/produtos/outsourcing.html
+++ b/produtos/outsourcing.html
@@ -79,9 +79,9 @@
 
     <span class="rodape"></span>
     
-    <script src="../assets/js/componente_menu.js"></script>
-    <script src="../assets/js/componente_rodape.js"></script>
-    <script src="../assets/js/main.js" defer></script>
+    <script src="https://bistec.com.pt/assets/js/componente_menu.js"></script>
+    <script src="https://bistec.com.pt/assets/js/componente_rodape.js"></script>
+    <script src="https://bistec.com.pt/assets/js/main.js" defer></script>
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
     <script src="//code.jivosite.com/widget/3bZuUHkWaM" async></script>
 </body>
