--- a/produtos/wifi.html
+++ b/produtos/wifi.html
@@ -19,14 +19,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bistec WiFi - Bistec Portugal</title>
-    <link rel="stylesheet" href="../assets/css/sticky.css">
-    <link rel="stylesheet" href="../assets/css/style.css">
-    <link rel="stylesheet" href="../assets/css/styleMobile.css">
-    <link rel="stylesheet" href="../assets/css/styleTablet.css">
-    <link rel="stylesheet" href="../assets/css/styleTelaQuadrada.css">
-    <link rel="stylesheet" href="../assets/css/styleTv.css">
-    <link rel="stylesheet" href="../assets/css/styleProdutos.css">
-    <link rel="stylesheet" href="../assets/css/styleDark.css">
+    <link rel="stylesheet" href="https://bistec.com.pt/assets/css/sticky.css">
+    <link rel="stylesheet" href="https://bistec.com.pt/assets/css/style.css">
+    <link rel="stylesheet" href="https://bistec.com.pt/assets/css/styleMobile.css">
+    <link rel="stylesheet" href="https://bistec.com.pt/assets/css/styleTablet.css">
+    <link rel="stylesheet" href="https://bistec.com.pt/assets/css/styleTelaQuadrada.css">
+    <link rel="stylesheet" href="https://bistec.com.pt/assets/css/styleTv.css">
+    <link rel="stylesheet" href="https://bistec.com.pt/assets/css/styleProdutos.css">
+    <link rel="stylesheet" href="https://bistec.com.pt/assets/css/styleDark.css">
     <link rel="icon" href="https://ik.imagekit.io/bistecbr/simbolo.png">
 </head>
 <body>
@@ -83,9 +83,9 @@
 
     <span class="rodape"></span>
     
-    <script src="../assets/js/componente_menu.js"></script>
-    <script src="../assets/js/componente_rodape.js"></script>
-    <script src="../assets/js/main.js" defer></script>
+    <script src="https://bistec.com.pt/assets/js/componente_menu.js"></script>
+    <script src="https://bistec.com.pt/assets/js/componente_rodape.js"></script>
+    <script src="https://bistec.com.pt/assets/js/main.js" defer></script>
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
     <script src="//code.jivosite.com/widget/3bZuUHkWaM" async></script>
 </body>
