--- a/produtos/automacao.html
+++ b/produtos/automacao.html
@@ -38,7 +38,7 @@
     <article id="first_section">
         <!-- banner -->
         <section class="banner-bistec">
-            <img src="../assets/images/produtos/bistec-automacao-intro.jpg" alt="Imagem de fundo do produto Bistec Automação">
+            <img src="https://ik.imagekit.io/bistecbr/produtos/bistec-automacao-intro.jpg" alt="Imagem de fundo do produto Bistec Automação">
             <!--<div class="banner-bistec-texto">
                 <h1>Bistec Portugal</h1>
                 <h2>Serviços em tecnologia para todas as empresas</h2>
@@ -75,9 +75,9 @@
    
     <span class="rodape"></span>
     
-    <script src="../assets/js/componente_menu.js"></script>
-    <script src="../assets/js/componente_rodape.js"></script>
-    <script src="../assets/js/main.js" defer></script>
+    <script src="https://bistec.com.pt/assets/js/componente_menu.js"></script>
+    <script src="https://bistec.com.pt/assets/js/componente_rodape.js"></script>
+    <script src="https://bistec.com.pt/assets/js/main.js" defer></script>
     <script src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js" defer></script>
     <script src="//code.jivosite.com/widget/3bZuUHkWaM" async></script>
 </body>
