--- a/produtos/soft.html
+++ b/produtos/soft.html
@@ -37,7 +37,7 @@
     <article id="first_section">
         <!-- banner -->
         <section class="banner-bistec">
-            <img src="../assets/images/produtos/bistec-soft-intro.jpg" alt="Imagem de fundo do produto Bistec Edu">
+            <img src="https://ik.imagekit.io/bistecbr/produtos/bistec-soft-intro.jpg" alt="Imagem de fundo do produto Bistec Edu">
             <!--<div class="banner-bistec-texto">
                 <h1>Bistec Portugal</h1>
                 <h2>Serviços em tecnologia para todas as empresas</h2>
